--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,12 +3,14 @@ owner: TheWanderingCitizen # Your GitHub organization or username, where this re
 repo: uptime # The name of this repository
 
 sites:
-  - name: Citizenwiki
+  - name: Citizenwiki mediawiki
     url: "https://citizenwiki.cn/index.php?title=Special:%E7%94%A8%E6%88%B7%E7%99%BB%E5%BD%95&returnto=Home"
   - name: Citizenwiki 42Kit
     url: https://42kit.citizenwiki.cn
-  - name: Passport Service
+  - name: Passport (User Auth) Service
     url: https://passport.citizenwiki.cn
+  - name: 42Kit Weblate
+    url: https://translate.42kit.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
